WIP - still buggy, invaders not visible, early

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -110,3 +110,179 @@ html, body {
   width: 100%;
   top: 220px;
 }
+
+
+
+body {
+  background: #202028;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1em;
+  background-color: #0D47A1;
+}
+
+p {
+  text-align: left;
+}
+
+#spa-links {
+  font-size: 2em;
+}
+
+#spa-main {
+  font-family: 'Roboto', sans-serif;
+}
+
+#spa-content {
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+}
+
+
+
+
+#projects {
+  color: #000000;
+}
+
+#projects-col-left {
+  float: left;
+}
+
+#projects-col-right {
+  float: right;
+}
+
+#navbar_title {
+  text-decoration: "none";
+}
+
+AppBar {
+  text-align: center;
+}
+
+#jetris-container {
+}
+
+#jetris-title {
+}
+
+#score, #jetris {
+  text-align: center;
+  
+}
+
+#jetris_info {
+}
+
+#jetris_title {
+  color: #000000;
+  text-align: left;
+  width: 100%;
+}
+
+#jetris_screenshot {
+}
+
+.project_card {
+  text-align: left;
+  font-size: 28px;
+}
+
+.social_links_spacer a {
+  display: inline-flex;
+  padding: 20px;
+}
+
+.fa {
+  font-size: 42px;
+}
+
+.social_links {
+  vertical-align: middle;
+  font-size: 2em !important;
+}
+
+#profile, #contact, #projects, #home, #no_match {
+  padding: 20px;
+    display: block;
+    text-align: left;
+}
+
+#contact {
+  text-align: center;
+}
+
+#profile_img {
+  padding: 10px;
+  width: 11em;
+  display: block;
+  float: left;
+  clear: both;
+}
+
+#contact_links {
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#bars_menu_container {
+  border-radius: 24px;
+  height: 42px;
+    width: 42px;
+  display: inline-block;
+  text-align: center;
+}
+
+#menu_item_1, #menu_item_2, #menu_item_3 {
+  font-size: 30px;
+}
+
+#menu_item_3_container {
+  clear: both;
+  display: block;
+  vertical-align: middle;
+}
+
+
+#menu_item_3_icon {
+  float: right;
+  }
+
+svg {
+  vertical-align: middle !important;
+
+}
+
+#menu_item_3_text {
+  float: left;
+}
+
+#drawer-head {
+  padding: 22px;
+}
+
+.fa-bars {
+  margin: -3px !important,
+}
+
+canvas {      
+  border: solid .2em #fff;
+  height: 80vh;
+  text-align: center;
+}
+
+#footer {
+  padding: 20px;
+  text-align: center;
+  float: none;
+  clear: both;
+}
+
+#copyright {
+  font-size: 10em;
+  font-size: 0.7em;
+    color: #aaaaaa;
+
+}
